// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-form-field-search #render help should render component as expected 1`] = `"<gux-form-field-search hydrated=""> <input slot="input" type="search" name="e-1" id="gux-form-field-input-i" aria-describedby="gux-form-field-help-i"> <label slot="label" for="gux-form-field-input-i">Default</label> <span slot="help" id="gux-form-field-help-i">This is a help message</span> </gux-form-field-search>"`;

exports[`gux-form-field-search #render help should render component as expected 2`] = `
<div class="gux-above gux-form-field-container">
  <div class="gux-above gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <gux-icon hydrated="" icon-name="fa/magnifying-glass-regular" size="inherit"></gux-icon>
        <slot name="input"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="fa/hexagon-exclamation-solid" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help gux-show">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-search #render input attributes should render component as expected (1) 1`] = `"<gux-form-field-search lang="en" hydrated=""> <input slot="input" type="search" value="Sample search" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-search>"`;

exports[`gux-form-field-search #render input attributes should render component as expected (1) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <gux-icon hydrated="" icon-name="fa/magnifying-glass-regular" size="inherit"></gux-icon>
        <slot name="input"></slot>
        <gux-form-field-input-clear-button hydrated=""></gux-form-field-input-clear-button>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="fa/hexagon-exclamation-solid" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-search #render input attributes should render component as expected (2) 1`] = `"<gux-form-field-search lang="en" hydrated=""> <input slot="input" type="search" value="Sample search" disabled="" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-search>"`;

exports[`gux-form-field-search #render input attributes should render component as expected (2) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-disabled gux-input-container">
        <gux-icon hydrated="" icon-name="fa/magnifying-glass-regular" size="inherit"></gux-icon>
        <slot name="input"></slot>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="fa/hexagon-exclamation-solid" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-search #render input attributes should render component as expected (3) 1`] = `"<gux-form-field-search lang="en" hydrated=""> <input slot="input" type="search" value="Sample search" required="" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-search>"`;

exports[`gux-form-field-search #render input attributes should render component as expected (3) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-asterisk gux-beside gux-form-field-label gux-required">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <gux-icon hydrated="" icon-name="fa/magnifying-glass-regular" size="inherit"></gux-icon>
        <slot name="input"></slot>
        <gux-form-field-input-clear-button hydrated=""></gux-form-field-input-clear-button>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="fa/hexagon-exclamation-solid" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-search #render label-position should render component as expected (1) 1`] = `"<gux-form-field-search lang="en" hydrated=""> <input slot="input" type="search" value="Sample search" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-search>"`;

exports[`gux-form-field-search #render label-position should render component as expected (1) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <gux-icon hydrated="" icon-name="fa/magnifying-glass-regular" size="inherit"></gux-icon>
        <slot name="input"></slot>
        <gux-form-field-input-clear-button hydrated=""></gux-form-field-input-clear-button>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="fa/hexagon-exclamation-solid" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-search #render label-position should render component as expected (2) 1`] = `"<gux-form-field-search lang="en" label-position="above" hydrated=""> <input slot="input" type="search" value="Sample search" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-search>"`;

exports[`gux-form-field-search #render label-position should render component as expected (2) 2`] = `
<div class="gux-above gux-form-field-container">
  <div class="gux-above gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <gux-icon hydrated="" icon-name="fa/magnifying-glass-regular" size="inherit"></gux-icon>
        <slot name="input"></slot>
        <gux-form-field-input-clear-button hydrated=""></gux-form-field-input-clear-button>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="fa/hexagon-exclamation-solid" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-search #render label-position should render component as expected (3) 1`] = `"<gux-form-field-search lang="en" label-position="beside" hydrated=""> <input slot="input" type="search" value="Sample search" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-search>"`;

exports[`gux-form-field-search #render label-position should render component as expected (3) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <gux-icon hydrated="" icon-name="fa/magnifying-glass-regular" size="inherit"></gux-icon>
        <slot name="input"></slot>
        <gux-form-field-input-clear-button hydrated=""></gux-form-field-input-clear-button>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="fa/hexagon-exclamation-solid" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-search #render label-position should render component as expected (4) 1`] = `"<gux-form-field-search lang="en" label-position="screenreader" hydrated=""> <input slot="input" type="search" value="Sample search" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Label</label> </gux-form-field-search>"`;

exports[`gux-form-field-search #render label-position should render component as expected (4) 2`] = `
<div class="gux-form-field-container gux-screenreader">
  <div class="gux-form-field-label gux-screenreader">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div class="gux-input-container">
        <gux-icon hydrated="" icon-name="fa/magnifying-glass-regular" size="inherit"></gux-icon>
        <slot name="input"></slot>
        <gux-form-field-input-clear-button hydrated=""></gux-form-field-input-clear-button>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="fa/hexagon-exclamation-solid" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;
